--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.jumbotron {
+  background-color: #33FF3F
+}
+
+.Navbar {
+  background-color: #33FF3F;
+}
