--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,14 @@
 .Navbar {
   background-color: #33FF3F;
 }
+
+/* .img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+
+.img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+} */
